# ROS-Code-Checker-Simulation-Tool

./: README.md  create_test_packages.py  requirements.txt  run.py
code_checker/: __init__.py  checker.py  ros_parser.py  safety_checker.py
simulation/: __init__.py  simulator.py
tests/correct_package/: CMakeLists.txt  package.xml
tests/correct_package/src/: pick_place_node.py
tests/faulty_package/src/: unsafe_node.py
tests/simple_correct/src/: bad_node.py  simple_node.py
uploads/32c65fab/: simulation_report.json  validation_results.json
uploads/45f39cee/: validation_results.json
uploads/464729c8/: validation_results.json
uploads/a8f04780/: validation_results.json
uploads/b484fc82/: validation_results.json
uploads/d7ab8788/: validation_results.json
uploads/da5e8ede/: validation_results.json
uploads/e17c00e2/: validation_results.json
uploads/e3241df9/: validation_results.json
uploads/fbaa45d8/: validation_results.json
web_interface/: __init__.py  app.py
web_interface/templates/: index.html
